--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Angel Merge Game WebGL Ver_01.loader.js";
+      var loaderUrl = buildUrl + "/AngelMergeTheGameTest.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Angel Merge Game WebGL Ver_01.data",
-        frameworkUrl: buildUrl + "/Angel Merge Game WebGL Ver_01.framework.js",
-        codeUrl: buildUrl + "/Angel Merge Game WebGL Ver_01.wasm",
+        dataUrl: buildUrl + "/AngelMergeTheGameTest.data",
+        frameworkUrl: buildUrl + "/AngelMergeTheGameTest.framework.js",
+        codeUrl: buildUrl + "/AngelMergeTheGameTest.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "A Dose Of Do's Dough",
         productName: "Angel Merge",
